# QQQAssistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
.github/workflows/: docker-build.yml  e2e.yml
backend/: pyproject.toml
backend/PIL/: __init__.py
backend/app/: config.py  database.py  main.py
backend/app/api/: after_sales.py  exports.py  orders.py  products.py  purchase_orders.py  shipments.py
backend/app/models/: domain.py
backend/app/repositories/: after_sales_repository.py  order_repository.py  product_repository.py  shipment_repository.py
backend/app/schemas/: after_sales.py  export.py  order.py  product.py  purchase_order.py  shipment.py
backend/app/services/: __init__.py  after_sales_service.py  exporter_smartstore.py  image_cleanup.py  order_service.py  pricing.py  pricing_service.py  product_import_service.py  product_service.py  purchase_order_service.py  shipment_service.py  taobao_client.py  taobao_scraper.py  template_loader.py  translation_service.py
backend/config/channel_formats/: smartstore_default.json
backend/tests/: test_after_sales_api.py  test_image_cleanup.py  test_template_loader.py  test_use_cases.py
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  playwright.config.ts  tsconfig.json
frontend/src/: ChannelContext.tsx  main.tsx
frontend/src/components/: ChannelSelector.tsx
frontend/src/pages/: ImportProductPage.test.tsx  ImportProductPage.tsx  OrdersPage.tsx  ProductsPage.tsx  PurchaseOrdersPage.tsx  ShipmentsPage.tsx  SmartStoreExportPage.tsx  (+1 more)
(+1 files in other folders)
