[project]
name = "qqq-assistant-backend"
version = "0.1.0"
description = "Backend skeleton for QQQ Purchase Agency Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "google-cloud-translate>=3.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
